tree-optimization/97043 - fix latent wrong-code with SLP vectorization

When the unrolling decision comes late and would have prevented
eliding a SLP load permutation we can end up generating aligned
loads when the load is in fact unaligned.  Most of the time
alignment analysis figures out the load is in fact unaligned
but that cannot be relied upon.

The following removes the SLP load permutation eliding based on
the still premature vectorization factor.

2020-09-14  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/97043
	* tree-vect-slp.c (vect_analyze_slp_instance): Do not
	elide a load permutation if the current vectorization
	factor is one.

(cherry picked from commit e93428a8b056aed83a7678d4dc8272131ab671ba)